// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VButton should mount component and match snapshot 1`] = `
<button class="v-button grey lighten-2"
        style="min-width: 80px;"
>
</button>
`;

exports[`VButton should set button width and match snapshot 1`] = `
<button class="v-button grey lighten-2"
        style="width: 150px;"
>
</button>
`;

exports[`VButton should set color and match snapshot 1`] = `
<button class="v-button red darken-3"
        style="min-width: 80px;"
>
</button>
`;

exports[`VButton should set disabled and match snapshot 1`] = `
<button class="v-button v-button--disabled"
        style="min-width: 80px;"
>
</button>
`;

exports[`VButton should set label and match snapshot 1`] = `
<button class="v-button grey lighten-2"
        style="min-width: 80px;"
>
  <span class="v-button__label">
    test
  </span>
</button>
`;
